WIP try again with vector intrinsics
Implementation still not correct though.